// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`push-handler creates an issue 1`] = `
Array [
  Object {
    "body": "I am an example title

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L9-L15
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
    "owner": "nerrad",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue with a @todo comment 1`] = `
Array [
  Object {
    "body": "I am an example title

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L9-L15
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
    "owner": "nerrad",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue with a truncated title 1`] = `
Array [
  Object {
    "body": "This is a really, really, really, really, really, really, really, really, really, really long title

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L9-L15
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
    "owner": "nerrad",
    "repo": "tests",
    "title": "This is a really, really, really, really, really, really,...",
  },
]
`;

exports[`push-handler creates many (5) issues 1`] = `
Array [
  Array [
    Object {
      "body": "Title number 1 multiline

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4-L5
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
      "owner": "nerrad",
      "repo": "tests",
      "title": "Title number 1 multiline",
    },
  ],
  Array [
    Object {
      "body": "Title number 2

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
      "owner": "nerrad",
      "repo": "tests",
      "title": "Title number 2",
    },
  ],
  Array [
    Object {
      "body": "Title number 3

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
      "owner": "nerrad",
      "repo": "tests",
      "title": "Title number 3",
    },
  ],
  Array [
    Object {
      "body": "Title number 4 This is some other sentence with todo in it.

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4-L6
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
      "owner": "nerrad",
      "repo": "tests",
      "title": "Title number 4 This is some other sentence with todo in it.",
    },
  ],
  Array [
    Object {
      "body": "Title number 5

---
https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/file.txt#L4
---
###### :rocket: This issue was generated by the [automations bot](https://github.com/nerrad/automations) based on a \`todo\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. cc @nerrad",
      "owner": "nerrad",
      "repo": "tests",
      "title": "Title number 5",
    },
  ],
]
`;

exports[`push-handler reopens a closed issue 1`] = `
Array [
  Object {
    "body": ":rocket: This issue has been reopened because the **\`todo\`** comment still exists in [****](https://github.com/nerrad/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/), as of e06c237a0c041f5a0a61f1c361f7a1d6f3d669af.

---
###### If this was not intentional, just remove the comment from your code.",
    "issue_number": 1,
    "owner": "nerrad",
    "repo": "tests",
  },
]
`;
